--- a/hr_hospital/views/hospital_visit_views.xml
+++ b/hr_hospital/views/hospital_visit_views.xml
@@ -6,7 +6,11 @@
         <field name="model">hospital.visit</field>
         <field name="arch" type="xml">
             <form>
-                <VIEW_SPECIFICATIONS/>
+                <field name="patient_id"/>
+                <field name="doctor_id"/>
+                <field name="diagnosis_id"/>
+                <field name="visit_date"/>
+                <field name="case"/>
             </form>
         </field>
     </record>
@@ -16,7 +20,11 @@
         <field name="model">hospital.visit</field>
         <field name="arch" type="xml">
             <tree>
-                <VIEW_SPECIFICATIONS/>
+                <field name="patient_id"/>
+                <field name="doctor_id"/>
+                <field name="diagnosis_id"/>
+                <field name="visit_date"/>
+                <field name="case"/>
             </tree>
         </field>
     </record>
