--- a/hr_hospital/views/hospital_visit_views.xml
+++ b/hr_hospital/views/hospital_visit_views.xml
@@ -6,11 +6,11 @@
         <field name="model">hospital.visit</field>
         <field name="arch" type="xml">
             <form>
-                <field name="patient_id"/>
-                <field name="physician_id"/>
-                <field name="diagnosis_id"/>
-                <field name="visit_date"/>
-                <field name="case"/>
+                <!--                <field name="patient_id"/>-->
+                <!--                <field name="physician_id"/>-->
+                <!--                <field name="diagnosis_id"/>-->
+                <!--                <field name="visit_date"/>-->
+                <!--                <field name="case"/>-->
             </form>
         </field>
     </record>
@@ -20,11 +20,11 @@
         <field name="model">hospital.visit</field>
         <field name="arch" type="xml">
             <tree>
-                <field name="patient_id"/>
-                <field name="physician_id"/>
-                <field name="diagnosis_id"/>
-                <field name="visit_date"/>
-                <field name="case"/>
+                <!--                <field name="patient_id"/>-->
+                <!--                <field name="physician_id"/>-->
+                <!--                <field name="diagnosis_id"/>-->
+                <!--                <field name="visit_date"/>-->
+                <!--                <field name="case"/>-->
             </tree>
         </field>
     </record>
