--- a/hr_hospital/views/hospital_patient_views.xml
+++ b/hr_hospital/views/hospital_patient_views.xml
@@ -2,27 +2,31 @@
 <odoo>
 
     <record id="hospital_patient_view_form" model="ir.ui.view">
-        <field name="name">hospital.patient.view.form</field>
+        <field name="name">hospital.patient.form</field>
         <field name="model">hospital.patient</field>
         <field name="arch" type="xml">
-            <form>
-                <field name="name"/>
-                <field name="phone"/>
-                <field name="age"/>
-                <field name="birthday_date"/>
+            <form string="Patient">
+                <sheet>
+                    <group name="patient" string="Patient Information">
+                        <field name="name"/>
+                        <field name="birthday_date"/>
+                        <field name="age"/>
+                        <field name="passport"/>
+                    </group>
+                </sheet>
             </form>
         </field>
     </record>
 
     <record id="hospital_patient_view_tree" model="ir.ui.view">
-        <field name="name">hospital.patient.view.tree</field>
+        <field name="name">hospital.patient.tree</field>
         <field name="model">hospital.patient</field>
         <field name="arch" type="xml">
-            <tree>
+            <tree string="Patient">
                 <field name="name"/>
-                <field name="phone"/>
-                <field name="age"/>
                 <field name="birthday_date"/>
+                <field name="age"/>
+                <field name="passport"/>
             </tree>
         </field>
     </record>
@@ -30,10 +34,11 @@
     <record id="hospital_patient_action" model="ir.actions.act_window">
         <field name="name">Patients</field>
         <field name="res_model">hospital.patient</field>
-        <field name="view_mode">tree,form</field>
+        <field name='view_mode'>tree,form</field>
     </record>
 
     <menuitem id="patient_menu"
+              name="Patients"
               parent="hospital_main_menu"
               action="hospital_patient_action"
               sequence="20"/>
