[IMP] hr_hospital: models done except 10.1 and 8.1, some changes

--- a/hr_hospital/views/hospital_patient_visit_multi_views.xml
+++ b/hr_hospital/views/hospital_patient_visit_multi_views.xml
@@ -31,6 +31,7 @@
                 <field name="active"/>
                 <field name="diagnosis_id"/>
                 <field name="physician_id"/>
+                <field name="visit_id"/>
             </tree>
         </field>
     </record>
