[IMP] hr_hospital: formated and lint checked.

--- a/hr_hospital/views/hospital_patient_visit_multi_views.xml
+++ b/hr_hospital/views/hospital_patient_visit_multi_views.xml
@@ -26,7 +26,7 @@
         <field name="name">hospital.patient.visit.multi.tree</field>
         <field name="model">hospital.patient.visit.multi</field>
         <field name="arch" type="xml">
-            <tree string="Patient visit">
+            <tree>
                 <field name="visit_date"/>
                 <field name="treatment"/>
                 <field name="active"/>
