--- a/hr_hospital/views/hospital_patient_views.xml
+++ b/hr_hospital/views/hospital_patient_views.xml
@@ -23,7 +23,7 @@
         <field name="name">hospital.patient.tree</field>
         <field name="model">hospital.patient</field>
         <field name="arch" type="xml">
-            <tree string="Patient">
+            <tree>
                 <field name="name"/>
                 <field name="birthday_date"/>
                 <field name="age"/>
