--- a/hr_hospital/views/hospital_physician_views.xml
+++ b/hr_hospital/views/hospital_physician_views.xml
@@ -10,9 +10,31 @@
                     <group name="Physician"
                            string="Physician info">
                         <field name="name"/>
+                        <field name="phone"/>
+                        <field name="email"/>
+                        <field name="photo"/>
+                        <field name="gender"/>
+
                         <field name="speciality"/>
                         <field name="intern"/>
                         <field name="mentor_id"/>
+                        <notebook>
+                            <page string="Patients">
+                                <field name="patient_ids"/>
+                            </page>
+                        </notebook>
+                        <notebook attrs="{'invisible':
+                                         [('intern_ids', '=', False)]}">
+                            <page string="Interns">
+                                <field name="intern_ids" mode="kanban"/>
+                            </page>
+                        </notebook>
+                        <notebook attrs="{'invisible':
+                                         [('mentor_id', '=', False)]}">
+                            <page string="Mentor info">
+                                <field name="mentor_id"/>
+                            </page>
+                        </notebook>
                     </group>
                 </sheet>
             </form>
@@ -31,11 +53,48 @@
             </tree>
         </field>
     </record>
+    
+    <record id="hospital_physician_view_kanban" model="ir.ui.view">
+        <field name="name">hospital.physician.view.kanban</field>
+        <field name="model">hospital.physician</field>
+        <field name="arch" type="xml">
+            <kanban class="o_kanban_mobile" default_group_by="speciality"
+                    quick_create_view="hospital_physician_view_form">
+                <templates>
+                    <t t-name="kanban-box">
+                        <div>
+                            <field name="name"/>
+                        </div>
+                        <div>
+                            <field name="speciality"/>
+                        </div>
+                        <div>
+                            <field name="gender"/>
+                        </div>
+                        <div>
+                            <field name="phone"/>
+                        </div>
+                        <div>
+                            <button
+                                    name="action_physician_create_visit"
+                                    type="object"
+                                    class="oe_button"
+                            >
+                                Create visit
+                            </button>
+                        </div>
+
+                    </t>
+                </templates>
+
+            </kanban>
+        </field>
+    </record>
 
     <record id="hospital_physician_action" model="ir.actions.act_window">
         <field name="name">Physicians</field>
         <field name="res_model">hospital.physician</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">tree,form,kanban</field>
     </record>
 
     <menuitem id="physician_menu"
