--- a/hr_hospital/views/hospital_diagnosis_views.xml
+++ b/hr_hospital/views/hospital_diagnosis_views.xml
@@ -47,10 +47,21 @@
         </field>
     </record>
 
+    <record id="hospital_diagnosis_view_graph" model="ir.ui.view">
+        <field name="name">hospital.diagnosis.view.graph</field>
+        <field name="model">hospital.diagnosis</field>
+        <field name="arch" type="xml">
+            <graph type="pie">
+                <field name="disease_id"/>
+                <field name="case_date" interval="month"/>
+            </graph>
+        </field>
+    </record>
+
     <record id="hospital_diagnosis_action" model="ir.actions.act_window">
         <field name="name">Diagnoses</field>
         <field name="res_model">hospital.diagnosis</field>
-        <field name='view_mode'>tree,form,pivot</field>
+        <field name='view_mode'>tree,form,pivot,graph</field>
     </record>
 
     <menuitem id="diagnosis_menu"
