[IMP] hr_hospital: week 4 - task 10 done.

--- a/hr_hospital/views/hospital_physician_views.xml
+++ b/hr_hospital/views/hospital_physician_views.xml
@@ -89,6 +89,21 @@
         </field>
     </record>
 
+    <record id="hospital_physician_view_search" model="ir.ui.view">
+        <field name="name">hospital.physician.view.search</field>
+        <field name="model">hospital.physician</field>
+        <field name="arch" type="xml">
+            <search>
+                <filter name="mentor_id" string="Mentors"
+                        domain="[('intern','=',False)]"/>
+                <filter name="intern" string="Interns"
+                        domain="[('intern','=',True)]"/>
+                <filter name="patient_ids" string="No patients"
+                        domain="[('patient_ids','=',False)]"/>
+            </search>
+        </field>
+    </record>
+
     <record id="hospital_physician_action" model="ir.actions.act_window">
         <field name="name">Physicians</field>
         <field name="res_model">hospital.physician</field>
