[IMP] hr_hospital: week 4 - task 11, 12 done.

--- a/hr_hospital/views/hospital_patient_views.xml
+++ b/hr_hospital/views/hospital_patient_views.xml
@@ -32,6 +32,8 @@
 
                     <group name="patient" string="Patient Information">
                         <field name="name"/>
+                        <field name="phone"/>
+                        <field name="email"/>
                         <field name="birthday_date"/>
                         <field name="age"/>
                         <field name="passport"/>
