--- a/hr_hospital/views/hospital_analysis_views.xml
+++ b/hr_hospital/views/hospital_analysis_views.xml
@@ -11,7 +11,9 @@
                            string="Analysis info">
                         <field name="title"/>
                         <field name="sample"/>
+                        <field name="analysis_date"/>
                         <field name="patient_id"/>
+                        <field name="physician_id"/>
                     </group>
                 </sheet>
             </form>
@@ -48,10 +50,24 @@
         </field>
     </record>
 
+    <record id="hospital_analysis_view_pivot" model="ir.ui.view">
+        <field name="name">hospital.analysis.view.pivot</field>
+        <field name="model">hospital.analysis</field>
+        <field name="arch" type="xml">
+            <pivot display_quantity="1">
+                <field name="physician_id"
+                       string="Physician"
+                       type="row"/>
+                <field name="sample" type="col"/>
+                <field name="analysis_date" interval="month" type="col"/>
+            </pivot>
+        </field>
+    </record>
+
     <record id="hospital_analysis_action" model="ir.actions.act_window">
         <field name="name">Analyses</field>
         <field name="res_model">hospital.analysis</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">tree,form,pivot</field>
     </record>
 
     <menuitem id="analysis_menu"
