--- a/hr_hospital/report/physician_reports.xml
+++ b/hr_hospital/report/physician_reports.xml
@@ -8,12 +8,12 @@
         <field name="page_height">0</field>
         <field name="page_width">0</field>
         <field name="orientation">Portrait</field>
-        <field name="margin_top">40</field>
-        <field name="margin_bottom">23</field>
-        <field name="margin_left">7</field>
-        <field name="margin_right">7</field>
+        <field name="margin_top">20</field>
+        <field name="margin_bottom">20</field>
+        <field name="margin_left">10</field>
+        <field name="margin_right">10</field>
         <field name="header_line" eval="False"/>
-        <field name="header_spacing">35</field>
+        <field name="header_spacing">15</field>
         <field name="dpi">90</field>
     </record>
 
@@ -22,17 +22,11 @@
         <field name="name">Physician info</field>
         <field name="model">hospital.physician</field>
         <field name="report_type">qweb-pdf</field>
-        <field name="report_name">
-            hr_hospital.hospital_physician_report_template
-        </field>
-        <field
-                name="report_file">
-            hr_hospital.hospital_physician_report_template
-        </field>
-        <field name="paperformat_id"
-               ref="hr_hospital.paperformat_physician"/>
+        <field name="report_name">hr_hospital.hospital_physician_report_template_custom</field>
+        <field name="report_file">hr_hospital.hospital_physician_report_template_custom</field>
+        <field name="paperformat_id" ref="hr_hospital.paperformat_physician"/>
         <field name="binding_model_id" ref="model_hospital_physician"/>
-        <field name="binding_view_types">form</field>
+        <field name="binding_view_types">form,list</field>
         <field name="binding_type">report</field>
     </record>
 
