--- a/hr_hospital/report/physician_templates.xml
+++ b/hr_hospital/report/physician_templates.xml
@@ -21,50 +21,35 @@
     </template>
 
     <template id="hospital_physician_report_template_custom">
-        <t t-call="web.basic_layout">
+        <t t-call="web.html_container">
             <t t-foreach="docs" t-as="physician">
-                <div class="page m-0 p-0">
-                    <div class="d-flex flex-column">
-
-                        <div class="header row align-items-start">
-                            <div class="col-7">
-                                <br/>
+                <t t-call="web.basic_layout">
+                    <div class="page p-0 m-0" style="font-size: 22px;">
+                        <div class="header" style="display: flex; flex-direction: column; min-width: 100%;">
+                            <div>
+                                <img style="width: 200px" t-if="res_company.logo" t-att-src="image_data_uri(res_company.logo)" alt="Logo"/>
                             </div>
-                            <div class="col-5">
-                                <div class="text-right">
-                                    <img t-if="res_company.logo"
-                                         t-att-src="image_data_uri(res_company.logo)"
-                                         style="max-height: 45px;"
-                                         alt="Logo"/>
-                                </div>
-                                <div class="text-right">
-                                    <t t-raw="res_company.company_details"/>
-                                </div>
-                                <div class="text-right">
-                                    <p>Physician Name:
-                                        <t t-out="physician.name"/>
-                                    </p>
-                                </div>
-                                <div class="text-right">
-                                    <p>Physician Speciality:
-                                        <t t-out="physician.speciality"/>
-                                    </p>
-                                </div>
+                            <div style="flex: 0 0 50%;">
+                                <t t-raw="res_company.company_details"/>
+                            </div>
+                            <div style="flex: 0 0 50%;">
+                                <p>Name:
+                                    <t t-out="physician.name"/>
+                                </p>
+                                <p>Speciality:
+                                    <t t-out="physician.speciality"/>
+                                </p>
                             </div>
                         </div>
 
-                        <div class="main row align-items-center">
-                            <p>Main</p>
-                        </div>
+                        <h2>Report title</h2>
+                        <p>This object's name is
+                            <span t-field="physician.name"/>
+                        </p>
 
-                        <div class="footer row align-items-end">
-                            <p>Footer</p>
-                        </div>
 
                     </div>
-
-                    <p style="page-break-after:always;"/>
-                </div>
+                </t>
             </t>
         </t>
     </template>
