--- a/hr_hospital/report/physician_templates.xml
+++ b/hr_hospital/report/physician_templates.xml
@@ -48,7 +48,7 @@
                                     </div>
                                 </div>
                                 <div class="activity pt-5">
-                                    <p class="h3">Activity of this physician</p>
+                                    <p class="h3 pb-5">Activity of this physician</p>
                                     <p>Patient number:
                                         <t t-esc="len(physician.patient_ids)"/>
                                     </p>
@@ -64,9 +64,62 @@
                                         </p>
                                     </t>
                                 </div>
-                                <div class="patients">
-                                    <p class="h3">Physician patients</p>
-                                </div>
+                                <t t-if="physician.patient_ids">
+                                    <div class="patients">
+                                        <p class="h3 pb-5">Physician patient info</p>
+                                        <table class="table">
+                                            <thead>
+                                                <tr>
+                                                    <th scope="col">Name</th>
+                                                    <th scope="col">Age</th>
+                                                    <th scope="col">Gender</th>
+                                                    <th scope="col">Diagnoses</th>
+                                                    <th scope="col">Patient state</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <t t-foreach="physician.patient_ids" t-as="patient">
+                                                    <tr>
+                                                        <td>
+                                                            <t t-out="patient.name"/>
+                                                        </td>
+                                                        <td>
+                                                            <t t-out="patient.age"/>
+                                                        </td>
+                                                        <td>
+                                                            <t t-out="patient.gender"/>
+                                                        </td>
+                                                        <td>
+                                                            <t t-foreach="patient.diagnosis_ids" t-as="diagnosis">
+                                                                <p>
+                                                                    <t t-out="diagnosis.disease_id.name"/>
+                                                                </p>
+                                                            </t>
+                                                        </td>
+                                                        <t t-set="disease_states" t-value="patient.diagnosis_ids.filtered(lambda r: r.disease_id).mapped('disease_id.severity')"/>
+                                                        <t t-if="'high' in disease_states">
+                                                            <t t-set="state" t-value="'danger'"/>
+                                                        </t>
+                                                        <t t-if="'moderate' in disease_states and not 'high' in disease_states">
+                                                            <t t-set="state" t-value="'warning'"/>
+                                                        </t>
+                                                        <t t-if="not 'moderate' in disease_states and not 'high' in disease_states">
+                                                            <t t-set="state" t-value="'success'"/>
+                                                        </t>
+                                                        <td>
+                                                            <div class="p-4">
+                                                                <div t-attf-class="bg-{{ state }}" style="width: 100%; height: 100%;">State</div>
+                                                            </div>
+                                                        </td>
+                                                    </tr>
+                                                </t>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </t>
+                                <t t-if="not physician.patient_ids">
+                                    <p class="h3 pb-5">This physician does not have any patients.</p>
+                                </t>
                                 <div class="time pt-5">
                                     <p>Print at:
                                         <t t-esc="context_timestamp(datetime.datetime.now()).strftime('%Y-%m-%d %H:%M')"/>
