--- a/hr_hospital/views/hospital_disease_views.xml
+++ b/hr_hospital/views/hospital_disease_views.xml
@@ -14,6 +14,7 @@
                         <field name="treatment"/>
                         <field name="mortality"/>
                         <field name="parent_id"/>
+                        <field name="severity"/>
                     </group>
                 </sheet>
             </form>
@@ -31,6 +32,7 @@
                 <field name="symptoms"/>
                 <field name="treatment"/>
                 <field name="mortality"/>
+                <field name="severity"/>
             </tree>
         </field>
     </record>
