--- a/hr_hospital/report/report_disease_count.xml
+++ b/hr_hospital/report/report_disease_count.xml
@@ -1,15 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+
     <template id="report_disease_count">
         <t t-call="web.html_container">
-            <t t-foreach="docs" t-as="doc">
+            <t t-call="web.basic_layout">
                 <div class="page">
-                    <h2>Disease Count Report</h2>
-                    <table class="table table-bordered">
-
+                    <p class="h3 p-5">Disease statistic</p>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Disease title</th>
+                                <th scope="col">Number of diagnosis with this disease</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <t t-foreach="data" t-as="disease">
+                                <tr>
+                                    <td>
+                                        <t t-esc="disease"/>
+                                    </td>
+                                    <td>
+                                        <t t-esc="data.get(disease)"/>
+                                    </td>
+                                </tr>
+                            </t>
+                        </tbody>
                     </table>
                 </div>
             </t>
         </t>
     </template>
+
 </odoo>
